k8s/ten-changelog/deployment.yml
#@ load("@ytt:data", "data")
#! https://github.com/k14s/ytt/blob/master/examples/data-values/config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.name
  namespace: #@ data.values.namespace
  labels:
    app: #@ data.values.name
spec:
  replicas: #@ data.values.replicas
  selector:
    matchLabels:
      app: #@ data.values.name
  template:
    metadata:
      labels:
        app: #@ data.values.name
    spec:
      containers:
        - image: #@ data.values.image
          ports:
            - name: http
              containerPort: #@ data.values.http_port
          name: #@ data.values.name
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 5
