k8s/ten-changelog/service.yml
#@ load("@ytt:data", "data")
#! https://github.com/k14s/ytt/blob/master/examples/data-values/config.yml
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.name
  namespace: #@ data.values.namespace
  annotations:
    external-dns.alpha.kubernetes.io/hostname: #@ data.values.fqdn
spec:
  selector:
    app: #@ data.values.name
  ports:
    - name: http
      port: #@ data.values.http_port
      protocol: TCP
      targetPort: #@ data.values.http_port
  type: LoadBalancer
